fix overflow issue

--- a/frontend/components/article/article.less
+++ b/frontend/components/article/article.less
@@ -4,6 +4,11 @@
   padding: 0 15px;
 }
 
+.header {
+  margin-top: 7px;
+  margin-bottom: 27px;
+}
+
 .logo-loading {
   width: 120px;
 }
