--- a/frontend/less/index.less
+++ b/frontend/less/index.less
@@ -51,6 +51,10 @@ body {
   padding-top: 50px;
 }
 
+.container {
+  overflow-x: hidden;
+}
+
 @media (max-width: @screen-xs-max) {
   .container {
     padding-left: 0;
